# stockWebChat

./: .gitignore  CLAUDE.md  Dockerfile  README.md  config.example.json  docker-compose.yml  main.py  pyproject.toml  重构规划.md
.github/workflows/: deploy.yml
client/: .npmrc  index.html  package.json  pnpm-lock.yaml  tailwind.config.js  tsconfig.json  tsconfig.node.json  vite.config.ts
client/src/: App.vue  style.css
client/src/components/: AnalysisChips.vue  ChatMessage.vue  ConfigForm.vue  SessionSidebar.vue  StockChart.vue  StrategyEditor.vue
client/src/components/ui/dialog/: DialogContent.vue  DialogDescription.vue  DialogFooter.vue  DialogHeader.vue  DialogTitle.vue
client/src/components/ui/input/: Input.vue
client/src/components/ui/textarea/: Textarea.vue
client/src/router/: index.ts
client/src/stores/: chatStore.ts  configStore.ts
client/src/utils/: actions.ts
client/src/views/: ChatView.vue  SettingsView.vue
server/: app.py  config_manager.py
server/agent/: client_ext.py  conversation.py  runner.py  strategy_tools.py  tools.py
server/routers/: chat.py  config.py  market.py
server/services/: action_registry.py  feishu_client.py  logger.py  strategies.py  zhihu_search.py
strategies/: bottom_volume.yaml  box_oscillation.yaml  bull_trend.yaml  chan_theory.yaml  dragon_head.yaml  emotion_cycle.yaml  event_driven.yaml  expectation_repricing.yaml  growth_quality.yaml  hot_theme.yaml  ma_golden_cross.yaml  one_yang_three_yin.yaml  presets.json  risk_stop.yaml  shrink_pullback.yaml  volume_breakout.yaml  wave_theory.yaml
